# agentshield

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agentiva.db  agentshield.db  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  vercel.json
.deepeval/: .deepeval_telemetry.txt
agentiva/: __init__.py  cli.py
agentiva/alerts/: alerter.py
agentiva/api/: basic_chat_responses.py  chat.py  chat_router.py  server.py
agentiva/audit/: __init__.py  compliance.py
agentiva/auth/: jwt_auth.py  tenancy.py
agentiva/compliance/: __init__.py  audit_grounding.py  hipaa_report.py  knowledge_base.py  (+4 more)
agentshield/: __init__.py  cli.py
benchmarks/: __init__.py  deepteam_benchmark.py  garak_benchmark.py  pyrit_agentiva_target.py  pyrit_benchmark.py  run_all_benchmarks.py  run_benchmark.py
dashboard/: auth.ts  env.local.template  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
demo/: .gitignore  README.md  __init__.py  paybot_demo.py  proof_demo.py  real_agent.py  real_incidents_demo.py  run_real_incidents_demo.sh  setup_demo_environment.py
docs/: pitch-deck-pricing-slide.md
examples/: README.md  live_demo.py
policies/: default.yaml
scripts/: dev-stack.sh  serve-fresh.sh
tests/: test_advanced_context_role_baseline_whitelist_drift.py  test_agent_registry.py  test_alerting.py  test_anomaly_detector.py  test_api.py  test_browser_agent.py  test_chat.py  test_chat_grounding.py  test_chat_help_unblock.py  test_cli_scan_init.py  test_code_agent.py  test_compliance_exports.py  test_compliance_knowledge_base.py  test_compliance_pdf_exports.py  test_compliance_rag.py  test_core.py  test_crewai_hook.py  test_database.py  test_demo_environment.py  test_edge_cases.py  test_enterprise_approvals_mandatory_geo.py  test_industry_templates.py  test_integration_negotiation_flow.py  test_jwt_auth.py  test_langchain.py  test_mcp_proxy.py  test_multi_agent.py  test_multi_tenant.py  test_negotiation.py  test_openai_hook.py  test_param_attack_vectors.py  test_param_concurrent.py  test_param_fuzzing.py  test_param_industry_compliance.py  test_param_policy_rules.py  test_param_real_incidents.py  test_param_risk_scoring.py  test_phi_detector.py  test_policy.py  test_real_demo.py  (+4 more)
website/: index.html  package.json
(+69 files in other folders)
